--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     },
     "dependencies": {
         "pinia": "^2.1.7",
+        "tdesign-vue-next": "^1.9.3",
         "vue": "^3.4.21",
         "vue-router": "^4.3.0"
     },
